@@ -75,6 +75,8 @@ Changes made from the "0.7.0" release to the "0.8.0" release:
 
 - Added an extension for the GLC_PIXMAP_QSO rendering style (similar to
   GLC_BITMAP but uses glDrawPixels() instead of glBitmap())
+- Modified the GL state management for GLC_BITMAP and GLC_PIXMAP_QSO so that it
+  is only modified once per string rather than once per character
 	
 Changes made from the "0.6.5" release to the "0.7.0" release:
 -------------------------------------------------------------
